--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -1,8 +1,6 @@
 body{
     margin: 0;
     padding: 0;
-    background: url(../ASSETS/pexels-photo-1068523.jpeg);
-    background-size: cover;
 }
 /* navigation bar styling */
 .navbar{
@@ -23,7 +21,7 @@ body{
     /* border: 2px solid black; */
     text-decoration: none;
     margin:0;
-    padding: 25px 40px;
+    padding: 23px 40px;
     text-align: center;
     font-size: 22px;
     font-family: arial,serif;
@@ -50,6 +48,7 @@ body{
     margin:15px 10px 10px 15px;
     font-size: 30px;
     color: white;
+    display: none;
 }
 
 
@@ -63,27 +62,28 @@ body{
     margin-left: auto;
     transform: translateX(-15%);
     transition-delay: 1.2, 0ms;
-    animation-name: banka;
-    animation-duration: 10s;
+    animation: 10s banka infinite;
+
 }
 
 @keyframes banka{
-    0%{color: white;}
-    25%{color: rgb(252, 193, 66)}
-    50%{color: rgb(253, 176, 9)}
-    75%{color: teal}
-    100%{color: white;}
+    0%{color: white;margin-right:0;margin-left: 0;}
+    25%{color: rgb(252, 193, 66);margin-right: 15px; margin-left: 0;}
+    50%{color: rgb(253, 176, 9);margin-right: 0; margin-left: 15px;}
+    75%{color: teal;margin-right: 15px; margin-left: 0;}
+    100%{color: white;margin-right: 15px; margin-left: 0;}
 }
 
 /* side nav bar styling */
 
 .side-nav-bar{
+    display: none;
     height: 100%;
     width: 0;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 11;
     background-color: black;
     opacity: .9;
     overflow-x: hidden;
@@ -94,9 +94,9 @@ body{
 
 .side-nav-bar a{
     text-decoration: none;
-    padding: 15px 15px 15px 30px;
+    padding: 10px 10px 10px 15px;
     display: block;
-    font-size: 25px;
+    font-size: 18px;
     color: white;
     
 }
@@ -107,37 +107,267 @@ body{
 .side-nav-bar .close-icon{
     position:absolute;
     top: 0px;
-    right: 25px;
+    right: 15px;
     font-size: 40px;
+    display: none;
+}
+/* welcome page media query */
+@media all and (max-width:2559px){
+    .navbar{
+        width: 100%;
+    }
+    #main-area{
+        height: 1000px;
+        height: 100%;
+    }
+}
+@media all and (max-width:1024px){
+    .navbar{
+        width: 100%;
+        height: 69px;
+    }
+    .navbar .navbar1{
+        width: 90%;
+
+    }
+    .navbar .navbar2{
+        width: 20%;
+    }
+    .navbar .navbar1 a{
+        display: inline ;
+        padding: 23px 25px;
+        font-size: 20px;
+    }
+   
+}
+@media all and (max-width:959px){
+    body{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        background-position: relative;
+       
+    }
+    .navbar {
+        width: 100%;
+        height: 67px;
+    }
+    .navbar .navbar1{
+        width: 90%;
+
+    }
+    .navbar .navbar2{
+        width: 20%;
+    }
+    .navbar .navbar1 a{
+        display: inline ;
+        padding: 23px 15px;
+        font-size: 18px;
+    }
+    .fa-bars{
+        display: none;
+    }
+    .side-nav-bar .close-icon{
+        display: none;
+    }
+    
+}
+
+@media all and (max-width:640px){
+    body{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+    .navbar{
+        width: 100%;
+        position: relative;
+        position: fixed top;
+
+    }
+    .navbar .navbar1 a{
+        display: none;
+    }
+    .fa-bars{
+        display: block;
+    }
+    .side-nav-bar .close-icon{
+        display: block;
+    }
+    .side-nav-bar{
+        display: block;
+        width: 25%;
+    }
+    .side-nav-bar a{
+        font-family: 15px;
+    }
+    .navbar .navbar2 {
+        font-size: 25px;
+    }
+    #main-area .slider{
+        flex-basis: 30%;
+    }
+    #main-area .non-slider{
+        flex-basis: 70%;
+    }
+   
 }
 
 /* main area styling */
 
-
 #main-area{
-    transition:margin-left 0.5s;
-    width: 100%;
-    border: 2px solid black;
-    height: 600px;
+   display: flex;
+   flex-direction: column;
+   transition: margin-left 0.5s; 
+   width: 100%;
+   height: 1000px;
+   padding: 0;
+   margin:0;
 }
 
-.layer{
+#main-area .main-area-images{
+    /* height: 300px; */
     width: 100%;
-    height: 600px;
+}
+
+#main-area .slider{
+    flex-basis: 50%;
+    border-bottom-left-radius: 2%;
+    overflow: hidden;
+    background:rgba(0,0,0,.9);
+    z-index: 2;
+}
+#main-area .non-slider{
+    flex-basis: 50%;
+    border-top-right-radius: 2%;
+}
+
+#main-area .slider figure div{
+    width: 20%;
+    float: left;
+
+}
+#main-area .slider figure img{
+    width: 100%;
+    float: left;
+    z-index: 0;
+
+}
+#main-area .slider figure{
+    width: 500%;
     position: relative;
-    top: 0;
-    padding: 0;
-    background-color: black;
-    opacity: .9;
-    z-index: 1;
+    margin: 0;
+    left: 0;
+    animation: 30s moveimage infinite;
+}
+@keyframes moveimage{
+    0%{
+        left: 0%;
+    }
+    10%{
+        left: 0%;
+    }
+    12%{
+        left: -100%;
+    }
+    22%{
+        left:-100%;
+    }
+    24%{
+        left: -200%;
+    }
+    34%{
+        left: -200%;
+    }
+    36%{
+        left: -300%;
+    }
+    46%{
+        left: -300%;
+    }
+    48%{
+        left: -400%;
+    }
+    58%{
+        left: -400%;
+    }
+    60%{
+        left: -300%;
+    }
+    70%{
+        left: -300%;
+    }
+    72%{
+        left: -200%;
+    }
+    82%{
+        left: -200%;
+    }
+    84%{
+        left: -100%;
+    }
+    94%{
+        left: -100%;
+    }
+    
+}
+/* styles for paragraphs on the sliding images */
+#main-area .slider p{
+    font-size: 30px;
+    font-weight: 900;
+    color: rgb(253, 176, 9);
+    text-align: center;
+    position: absolute;
+    padding-top: 90px;
+    width: 20%;
+    font-family: Arial, Helvetica, sans-serif;
+    z-index: 3;
 }
 
+#main-area .slider h1{
+    font-size: 90px;
+    font-weight: bold;
+    color: rgb(253, 176, 9);
+    text-align: center;
+    position: absolute;
+    padding-top: 100px;
+    width: 20%;
+    font-family: Arial, Helvetica, sans-serif;
+    z-index: 3;
 
+}
+/* media queries for sliding area */
+@media all and (max-width: 959px){
+    #main-area .slider figure img{
+        width: 100%;
+        height: 500px;
+    }
+    #main-area .slider h1{
+        font-size: 70px;
+    }
+    #main-area .slider p{
+        font-size: 22px;
+        padding-top: 135px;
+    }
+}
+@media all and (max-width: 649px){
+    #main-area .slider figure img{
+        width: 100%;
+        height: 500px;
+    }
+    #main-area .slider h1{
+        font-size: 70px;
+    }
+    #main-area .slider p{
+        font-size: 25px;
+        padding-top: 135px;
+    }
+
+}
 /* footer styling */
 
 .footer{
     width: 100%;
-    height: 60px;
-    border: 2px solid blue;
+    height: 62px;
     background-color: #3b5998;
 }
