--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -12,6 +12,12 @@ body{
     
     
 }
+#navbarId{
+    transition: margin-left 0.5s; 
+}
+#barsmenu{
+    transition-delay:0.5s;
+}
 .navbar1{
     /* border: 2px solid white; */
     flex-basis: 70%;
@@ -236,10 +242,11 @@ body{
     overflow: hidden;
     background:rgba(0,0,0,.9);
     z-index: 2;
+    border-bottom: 5px solid rgb(253, 176, 9);
 }
 #main-area .non-slider{
+
     flex-basis: 50%;
-    border-top-right-radius: 2%;
 }
 
 #main-area .slider figure div{
@@ -318,7 +325,7 @@ body{
     color: rgb(253, 176, 9);
     text-align: center;
     position: absolute;
-    padding-top: 90px;
+    padding-top: 130px;
     width: 20%;
     font-family: Arial, Helvetica, sans-serif;
     z-index: 3;
@@ -337,20 +344,12 @@ body{
 
 }
 /* media queries for sliding area */
-@media all and (max-width: 959px){
-    #main-area .slider figure img{
-        width: 100%;
-        height: 500px;
-    }
-    #main-area .slider h1{
-        font-size: 70px;
-    }
+@media all and (max-width: 1439px){
     #main-area .slider p{
-        font-size: 22px;
-        padding-top: 135px;
+        font-size: 27px;
     }
 }
-@media all and (max-width: 649px){
+@media all and (max-width: 959px){
     #main-area .slider figure img{
         width: 100%;
         height: 500px;
@@ -362,7 +361,108 @@ body{
         font-size: 25px;
         padding-top: 135px;
     }
+}
+@media all and (max-width: 649px){
+    #main-area .slider figure img{
+        width: 100%;
+        height: 500px;
+    }
+    #main-area .slider h1{
+        font-size: 60px;
+    }
+    #main-area .slider p{
+        font-size: 20px;
+        padding-top: 135px;
+    }
+    .non-slider{
+        display: block;
+    }
 
+}
+
+/* styles for non-sliding body */
+.non-slider{
+    display: flex;
+}
+.non-sliderOne{
+    flex-basis: 50%;
+    margin: 50px 0 0 10px;
+
+}
+.non-sliderTwo{
+    flex-basis: 50%;
+}
+.homeServices{
+    margin-top: 10px;
+    padding: 0;
+    font-size: 20px;
+    display: flex;
+    border-radius: 5px;
+    background: linear-gradient(100deg,rgb(253, 176, 9),#3b5998 );
+    background-size: 100% 100%;
+    animation: homeServices 10s  ease infinite;
+    
+}
+@keyframes homeServices{
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+
+.more{
+    height: 70px;
+    padding-top: 7px;
+    background-color: rgb(253, 176, 9);
+    border-radius: 5px;
+    margin-top: 20px;
+    background: linear-gradient(100deg,rgb(253, 176, 9),#3b5998 );
+    background-size: 100% 100%;
+    animation: homeServices 10s  ease infinite;
+}
+
+.homeServices a{
+    text-decoration: none;
+    color:white;
+    padding-top: 5px;
+
+}
+
+.non-sliderOne h1{
+    text-align: center;
+    font-size: 30px;
+}
+.homeServices a strong{
+    font-size: 30px;
+    color: rgb(253, 176, 9);
+}
+.homeServices i{
+    margin: 30px 20px;
+    font-size: 30px;
+    color: white;
+}
+
+/* media queries for homeServices */
+@media all and (max-width: 959px){
+    .non-slider{
+        display: block;
+    }
+}
+@media all and (max-width: 649px){
+    .non-slider{
+        display: block;
+        width: 100%;
+    }
+}
+/* keyframes for homeServices */
+.more .one .two .three{
+    animation: 5s homeServices 5s;
+}
+@keyframes homeServices{
+    0%{margin-top: 0}
+    25%{margin-top:0}
+    50%{margin-top:10px}
+    75%{margin-top:10px}
+    100%{margin-top:0}
 }
 /* footer styling */
 
@@ -370,4 +470,7 @@ body{
     width: 100%;
     height: 62px;
     background-color: #3b5998;
+}
+#footerId{
+    transition: margin-left 0.5s;
 }
