--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -330,7 +330,9 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     z-index: 3;
 }
-
+#main-area .slider .longParagraph p{
+    font-size: 25px;
+}
 #main-area .slider h1{
     font-size: 90px;
     font-weight: bold;
