[feature #164959042] increases main area height with media query @max-width: 649px

--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -562,6 +562,9 @@ body{
     .non-sliderTwo .signUp input[type="submit"]{
         margin-left: 255px;
     }
+    #main-area{
+        height: 1170px;
+    }
 }
 @media all and (max-width: 649px){
     .non-sliderTwo .signUp input[type="submit"]{
@@ -656,6 +659,7 @@ body{
     .non-sliderTwo .login input[type="submit"]{
         margin-left: 255px;
     }
+    
 }
 @media all and (max-width: 649px){
     .non-sliderTwo .login input[type="submit"]{
