--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+   
 }
 /* navigation bar styling */
 .navbar{
@@ -240,12 +241,12 @@ body{
     flex-basis: 50%;
     border-bottom-left-radius: 2%;
     overflow: hidden;
-    background:rgba(0,0,0,.9);
+    background: #6b9aff;
     z-index: 2;
     border-bottom: 5px solid rgb(253, 176, 9);
 }
 #main-area .non-slider{
-
+    background: #6b9aff;
     flex-basis: 50%;
 }
 
@@ -419,7 +420,7 @@ body{
     width: 90%;
     height: 70px;
     padding-top: 7px;
-    background-color: rgb(253, 176, 9);
+    color: #ddd;
     border-radius: 10px;
     margin: 20px auto 0 auto;
     background: linear-gradient(100deg,rgb(253, 176, 9),#3b5998 );
@@ -666,7 +667,238 @@ body{
         margin-left: 118px;
     }
 }
+/* AFTER SIGN UP PAGE STYLING */
+#main-areaPage{
+    background: #6b9aff;
+    display: flex;
+    flex-direction: row;
+    transition: margin-left 0.5s; 
+    width: 100%;
+    height: 570px;
+}
+.fa-bars{
+    display: none;
+}
+.main-area-left{
+    border-right: 1px solid #3b5998;
+    flex-basis: 30%;
+}
+.main-area-right{
+    text-align: center;
+    flex-basis: 70%;
+}
 
+.profileImage{
+    display: block;
+    position: relative;
+    margin: 200px auto;
+    width: 80%;
+    height: 350px;
+    background: #3b5998;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 5px 15px rgba(0,0,0,.9);
+    border-radius: 10px; 
+    transition-delay: 1.2, 0ms;
+    animation: 10s profile infinite;
+}
+
+
+
+@keyframes profile{
+0%{color: white;margin-top:100px;margin-bottom: 100px;}
+25%{color: rgb(252, 193, 66);margin-top:100px;margin-bottom: 100px;}
+50%{color: rgb(253, 176, 9);margin-top:200px;margin-bottom: 200px;}
+75%{color: teal;margin-top:200px;margin-bottom: 200px;}
+100%{color: white;margin-top:100px;margin-bottom: 100px;}
+}
+
+.profileImage h2{
+    margin: 0 0 30px;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+}
+.profileImage img{
+    position: absolute;
+    margin-left: 0;
+    text-align: center;
+    border-radius: 100%;  
+}
+
+.profileImage button{
+    margin: 120px 0 0 0;
+    border: none;
+    outline: none;
+    background: transparent;
+    background: rgb(253, 176, 9);
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 10px;
+    text-align: center;
+
+}
+.profileImage button a {
+    text-decoration: none;
+}
+.profileImage button a:hover{
+    color: #3b5998;
+}
+
+/* media queries for after sign up page */
+@media all and (max-width: 2560px){
+    #main-areaPage{
+        height: 800px;
+    }
+}
+@media all and (max-width: 649px){
+    #main-areaPage{
+        display: block;
+        height: 1200px;
+        margin-top: -120px;
+    }
+    .main-area-left{
+        flex-basis: 10%;
+        border-right: none;
+    }
+    .main-area-right{
+        flex-basis: 90%;
+    }
+}
+
+/* CSS STYLES FOR MAIN-AREA RIGHT SIDE */
+.main-area-right h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    color: gold;
+}
+/* media queries for main-area rigt side part */
+@media all and (max-width: 649px){
+    .main-area-right h1{
+        font-size: 40px;
+    }
+}
+/* create account styling */
+
+
+.main-area-right .createAccount{
+    /* display: none; */
+    position: relative;
+    margin: 50px auto;
+    width: 90%;
+    background: #3b5998;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 5px 15px rgba(0,0,0,.9);
+    border-radius: 10px; 
+}
+.main-area-right .createAccount h2{
+    margin: 0 0 30px;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+}
+.main-area-right .createAccount .createAccountInput{
+    position: relative;
+}
+.main-area-right .createAccount .createAccountInput input{
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: #fff;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    margin-bottom: 20px;
+}
+.main-area-right .createAccount .createAccountInput label{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding:0;
+    margin-top: -10px;
+    font-size: 20px;
+    letter-spacing: 1px;
+    color: #fff;
+    pointer-events: none;
+    transition: .9s;
+}
+.main-area-right .createAccount .createAccountInput input:focus ~ label,
+.main-area-right.createAccount .createAccountInput input:valid ~ label
+{
+    top: -10px;
+    left: 0;
+    color: rgb(253, 176, 9);
+    font-size: 15px;
+}
+
+.main-area-right .createAccount input[type="submit"]{
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: rgb(253, 176, 9);
+    padding: 15px 30px;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 18px;
+    text-align: center;
+    margin-left: 70px;
+}
+.closecreateAccount-icon{
+    text-decoration: none;
+    font-size: 30px;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    right: 15px;
+
+}
+.createAccountInput select{
+    width: 100%;
+    height: 20px;
+    margin-bottom: 20px;
+    border: none;
+    outline: none;
+    background: transparent;
+    border-bottom: 1px solid #fff;
+    color: #ddd;
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+.createAccountInput select option{
+   background:#3b5998;
+   color: #fff;
+   border: none;
+
+}
+/* media queries fron sign up button */
+
+@media all and (max-width: 1439px){
+    .main-area-right .createAccount input[type="submit"]{
+        margin-left:0;
+    }
+}
+@media all and (max-width: 959px){
+    .main-area-right .createAccount input[type="submit"]{
+        margin-left: 0;
+    }
+    #main-area{
+        height: 1170px;
+    }
+}
+@media all and (max-width: 649px){
+    .main-area-right .createAccount input[type="submit"]{
+        margin-left:0;
+    }
+}
 /* footer styling */
 
 .footer{
