--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -478,7 +478,7 @@ body{
     font-family: sans-serif;
 }
 .non-sliderTwo .signUp{
-    display: none;
+    /* display: none; */
     position: relative;
     margin: 50px auto;
     width: 90%;
@@ -674,7 +674,7 @@ body{
     flex-direction: row;
     transition: margin-left 0.5s; 
     width: 100%;
-    height: 570px;
+    height: 1000px;
 }
 .fa-bars{
     display: none;
@@ -750,11 +750,7 @@ body{
 }
 
 /* media queries for after sign up page */
-@media all and (max-width: 2560px){
-    #main-areaPage{
-        height: 800px;
-    }
-}
+
 @media all and (max-width: 649px){
     #main-areaPage{
         display: block;
@@ -897,6 +893,64 @@ body{
 @media all and (max-width: 649px){
     .main-area-right .createAccount input[type="submit"]{
         margin-left:0;
+    }
+}
+
+/* TRANSACTION FIELD */
+.main-area-right .transactionsPage{
+
+    /* border: 2px solid red; */
+    display: none;
+    position: relative;
+    margin: 50px auto;
+    width: 90%;
+    height: 300px;
+    background: #3b5998;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 5px 15px rgba(0,0,0,.9);
+    border-radius: 10px; 
+}
+
+.main-area-right .transactionsPage h2{
+    margin: 0 0 30px;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+}
+.main-area-right .transactionsPage table{
+    position: relative;
+    width: 100%;
+    background: transparent;
+
+}
+
+.main-area-right .transactionsPage table, th, td{
+    margin:20px auto;
+    border-bottom: 1px solid white;
+    text-align: center;
+    border-collapse: collapse;
+    height: 40px;
+    table-layout: fixed;
+    opacity: .9;
+    
+}
+
+.main-area-right .transactionsPage table tr:hover{
+    background: #6b9aff;
+}
+/* media queries for transactions */
+@media all and (max-width: 649px){
+    .main-area-right .transactionsPage{
+        font-size: 12px;
+    }
+}
+@media all and (max-width: 959px){
+    .main-area-right .transactionsPage{
+        font-size: 10px;
     }
 }
 /* footer styling */
