--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -118,14 +118,15 @@ body{
     font-size: 40px;
     display: none;
 }
+
 /* welcome page media query */
 @media all and (max-width:2559px){
     .navbar{
         width: 100%;
     }
     #main-area{
-        height: 1000px;
-        height: 100%;
+        /* height: 1000px; */
+
     }
 }
 @media all and (max-width:1024px){
@@ -563,9 +564,9 @@ body{
     .non-sliderTwo .signUp input[type="submit"]{
         margin-left: 255px;
     }
-    #main-area{
+    /* #main-area{
         height: 1170px;
-    }
+    } */
 }
 @media all and (max-width: 649px){
     .non-sliderTwo .signUp input[type="submit"]{
@@ -575,7 +576,7 @@ body{
 /* css styles for login UI */
 
 .non-sliderTwo .login{
-    display: none;
+    /* display: none; */
     position: relative;
     margin: 50px auto;
     width: 90%;
@@ -674,7 +675,7 @@ body{
     flex-direction: row;
     transition: margin-left 0.5s; 
     width: 100%;
-    height: 1000px;
+    /* height: 1400px; */
 }
 .fa-bars{
     display: none;
@@ -754,7 +755,7 @@ body{
 @media all and (max-width: 649px){
     #main-areaPage{
         display: block;
-        height: 1200px;
+        /* height: 1200px; */
         margin-top: -120px;
     }
     .main-area-left{
@@ -900,7 +901,7 @@ body{
 .main-area-right .transactionsPage{
 
     /* border: 2px solid red; */
-    display: none;
+    /* display: none; */
     position: relative;
     margin: 50px auto;
     width: 90%;
@@ -968,15 +969,15 @@ body{
 .main-area-right .transactionsPage{
     height: 450px;
 }
-#main-areaPage{
+/* #main-areaPage{
     height: 1200px;
-}
+} */
 
 /* media queries for after login dashboard page */
 @media all and (max-width: 649px){
-    #main-areaPage{
+    /* #main-areaPage{
         height: 1600px;
-    }
+    } */
     
 }
 /* VIEW ACCOUNTS STYLING */
@@ -996,6 +997,12 @@ body{
 .main-area-right .transactionsPage table tr i{
     margin: 4px;
     color: gold;
+}
+
+/* VIEW SPECIFIC ACCOUNT RECORD */
+.main-area-right .transactionsPage img{
+    border-radius: 100%;
+    box-shadow: 0 5px 15px rgba(0,0,0,.9);
 }
 /* footer styling */
 
