--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    
 }
 /* navigation bar styling */
@@ -32,7 +33,7 @@ body{
     text-align: center;
     font-size: 22px;
     font-family: arial,serif;
-    color: white;
+    color: rgb(253, 176, 9);
     float: left;
     position: relative;
     
@@ -48,7 +49,7 @@ body{
 }
 .navbar a:hover{
     background-color: #46619b;
-    color: rgb(253, 176, 9);
+    color: #ddd;
 }
 
 .fa-bars{
@@ -91,7 +92,7 @@ body{
     top: 0;
     left: 0;
     z-index: 11;
-    background-color: black;
+    background-color: #6b9aff;
     opacity: .9;
     overflow-x: hidden;
     transition: 0.5s;
@@ -104,7 +105,7 @@ body{
     padding: 10px 10px 10px 15px;
     display: block;
     font-size: 18px;
-    color: white;
+    color:#fff;
     
 }
 
@@ -123,10 +124,6 @@ body{
 @media all and (max-width:2559px){
     .navbar{
         width: 100%;
-    }
-    #main-area{
-        /* height: 1000px; */
-
     }
 }
 @media all and (max-width:1024px){
@@ -207,7 +204,7 @@ body{
         width: 25%;
     }
     .side-nav-bar a{
-        font-family: 15px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;;
     }
     .navbar .navbar2 {
         font-size: 25px;
@@ -329,7 +326,7 @@ body{
     position: absolute;
     padding-top: 70px;
     width: 20%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     z-index: 3;
 }
 #main-area .slider .longParagraph p{
@@ -346,10 +343,17 @@ body{
     position: absolute;
     padding-top: 30px;
     width: 20%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     z-index: 3;
 
 }
+#main-area .slider .Two p{
+    color: goldenrod;
+}
+#main-area .slider .Three p{
+    color: white;
+}
+
 /* media queries for sliding area */
 @media all and (max-width: 1439px){
     #main-area .slider p{
@@ -490,7 +494,7 @@ body{
 /* css styles for user sign up */
 
 .non-sliderTwo{
-    font-family: sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .non-sliderTwo .signUp{
     display: none;
@@ -564,7 +568,7 @@ body{
     border-radius: 10px;
     font-size: 18px;
     text-align: center;
-    margin-left: 437px;
+    margin-left: 430px;
 }
 .non-sliderTwo .signUp input[type="submit"]:hover{
     background: rgb(253, 176, 9);
@@ -585,9 +589,15 @@ body{
 }
 /* media queries fron sign up button */
 
-@media all and (max-width: 1439px){
+@media all and (max-width: 1440px){
     .non-sliderTwo .signUp input[type="submit"]{
-        margin-left: 255px;
+        margin-left: 380px;
+    }
+}
+
+@media all and (max-width: 1024px){
+    .non-sliderTwo .signUp input[type="submit"]{
+        margin-left: 250px;
     }
 }
 @media all and (max-width: 959px){
@@ -600,6 +610,10 @@ body{
     .non-sliderTwo .signUp input[type="submit"]{
         margin-left: 118px;
     }
+}
+.errMessage{
+    display: none;
+    color: rgb(252, 193, 66);
 }
 /* css styles for login UI */
 
@@ -691,14 +705,19 @@ body{
 }
 /* media queries fron sign up button */
 
-@media all and (max-width: 1439px){
+@media all and (max-width: 1440px){
     .non-sliderTwo .login input[type="submit"]{
-        margin-left: 155px;
+        margin-left: 380px;
+    }
+}
+@media all and (max-width: 1024px){
+    .non-sliderTwo .login input[type="submit"]{
+        margin-left: 250px;
     }
 }
 @media all and (max-width: 959px){
     .non-sliderTwo .login input[type="submit"]{
-        margin-left: 255px;
+        margin-left: 270px;
     }
     
 }
@@ -712,7 +731,7 @@ body{
     padding: 0;
     text-align: center;
     margin-top: 150px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(253, 176, 9);
     font-size: 40px;
     font-weight: 900;
@@ -754,7 +773,7 @@ body{
     width: 80%;
     height: 350px;
     background: #3b5998;
-    font-family: Arial, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     color: #fff;
     padding: 20px;
@@ -805,7 +824,7 @@ body{
     color: #3b5998;
 }
 .signupDashboard{ 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-top: 170px;
     text-align: center;
     padding: 0 80px;
@@ -1004,10 +1023,10 @@ body{
     position: relative;
     margin: 50px auto;
     width: 90%;
-    height: 300px;
+    height: 500px;
     background: #3b5998;
     color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 15px;
     padding: 20px;
     box-sizing: border-box;
@@ -1036,7 +1055,8 @@ body{
 }
 
 .main-area-right .transactionsPage table, th, td{
-    margin:20px auto;
+    margin:auto;
+    margin-left: 5px;
     border-bottom: 1px solid white;
     text-align: center;
     border-collapse: collapse;
@@ -1053,28 +1073,28 @@ body{
 @media all and (max-width: 1024px){
     .main-area-right .transactionsPage{
         font-size: 10px;
-        height: 350px;
+        height: 400px;
     }
 }
 
 @media all and (max-width: 959px){
     .main-area-right .transactionsPage{
         font-size: 10px;
+        height: 500px;
     }
 }
 
 @media all and (max-width: 649px){
     .main-area-right .transactionsPage{
         font-size: 12px;
+        height: 500px;
 
     }
     
 }
 
 /* AFTER LOGIN DASHBOARD STYLING */
-.main-area-right .transactionsPage{
-    height: 450px;
-}
+
 /* #main-areaPage{
     height: 1200px;
 } */
@@ -1089,20 +1109,31 @@ body{
 /* VIEW ACCOUNTS STYLING */
 .main-area-right .transactionsPage table tr input[type="submit"]{
     background: transparent;
+    width: 50px;
+    height: 18px;
     border: none;
     outline: none;
     color: #fff;
     background: rgb(253, 176, 9);
     cursor: pointer;
-    padding: 2px;
-    border-radius: 10px;
+    padding: 1px;
+    border-radius: 5px;
     font-size: 10px;
     text-align: center;
-    margin-left: 3px;
+    margin-left: 1px;
+}
+.main-area-right .transactionsPage table tr input[type="submit"]:hover{
+    background: rgb(241, 194, 92);
+    color: #4a6f8d;
 }
 .main-area-right .transactionsPage table tr i{
-    margin: 4px;
+    margin: 0;
+    margin-left: 2px;
+    margin-top: 2px;
     color: gold;
+}
+.main-area-right .transactionsPage table tr i:hover{
+    color: #ddd;
 }
 
 /* VIEW SPECIFIC ACCOUNT RECORD */
