--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -91,7 +91,7 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 11;
+    z-index: 9;
     background-color: #6b9aff;
     opacity: .9;
     overflow-x: hidden;
@@ -239,8 +239,9 @@ body{
     flex-basis: 40%;
     border-bottom-left-radius: 2%;
     overflow: hidden;
-    background: #6f8ac5;
-    z-index: 2;
+    background: #0c2d75;
+    opacity: .9;
+    z-index: 3;
     border-bottom: 5px solid rgb(253, 176, 9);
 }
 #main-area .non-slider{
@@ -256,6 +257,7 @@ body{
 #main-area .slider figure img{
     width: 100%;
     float: left;
+    opacity: .3;
     z-index: 0;
 
 }
@@ -327,7 +329,7 @@ body{
     padding-top: 70px;
     width: 20%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    z-index: 3;
+    z-index: 9;
 }
 #main-area .slider .longParagraph p{
     font-size: 25px;
@@ -344,7 +346,7 @@ body{
     padding-top: 30px;
     width: 20%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    z-index: 3;
+    z-index: 9;
 
 }
 #main-area .slider .Two p{
