[feature #165127010] add responsiveness to home page p tags

--- a/UI/CSS/styles.css
+++ b/UI/CSS/styles.css
@@ -374,6 +374,10 @@ body{
         font-size: 25px;
         padding-top: 135px;
     }
+   
+    #main-area .slider .Three p{
+        color: white;
+    }
 }
 @media all and (max-width: 649px){
     
